Fix z-index of css

--- a/widget.css
+++ b/widget.css
@@ -323,7 +323,7 @@
 
 #mapOverlay { 
     position: absolute;
-    z-index: 10000;
+    z-index: 2000;
     background-color: hsla(0, 0%, 100%, .45);
     top: 0;
     left: 0;
